--- a/index.html
+++ b/index.html
@@ -1912,20 +1912,7 @@
 											border-radius: 50%
 										}
 									</style>
-									<div class="elementor-social-icons-wrapper elementor-grid">
-										<span class="elementor-grid-item">
-											<a class="elementor-icon elementor-social-icon elementor-social-icon-facebook-f elementor-repeater-item-3d4d16f"
-												href="https://www.facebook.com/waterpallets" target="_blank">
-												<span class="elementor-screen-only">Facebook-f</span>
-												<i class="fab fa-facebook-f"></i> </a>
-										</span>
-										<span class="elementor-grid-item">
-											<a class="elementor-icon elementor-social-icon elementor-social-icon-linkedin elementor-repeater-item-12db40b"
-												href="https://www.linkedin.com/company/waterpallets-com/" target="_blank">
-												<span class="elementor-screen-only">Linkedin</span>
-												<i class="fab fa-linkedin"></i> </a>
-										</span>
-									</div>
+								
 								</div>
 							</div>
 						</div>
@@ -1945,8 +1932,7 @@
 						<div class="elementor-element elementor-element-454f935 elementor-widget elementor-widget-heading"
 							data-id="454f935" data-element_type="widget" data-widget_type="heading.default">
 							<div class="elementor-widget-container">
-								<h2 class="elementor-heading-title elementor-size-default">19986 Franz Rd.
-									Katy, TX 77449<br></br>(346)213-3624<br>ileewater24@gmail.com</h2>
+								<h2 class="elementor-heading-title elementor-size-default"><br>ileewater24@gmail.com</h2>
 								
 							</div>
 						</div>
